--- a/search.css
+++ b/search.css
@@ -36,6 +36,8 @@
 /* Show results in middle of page */
 .search-result-diplay {
   display: block;
+  /* Limit height */
+  height: 70vh;
   padding: 50px;
   border: 1px solid #8f97a0;
   border-radius: 5px;
@@ -47,20 +49,43 @@
   /* Put it above rest of content */
   box-shadow: 0px 0px 20px 0.1px #d0e0f1;
   z-index: 1000;
+
+  overflow: scroll;
 }
 
 .search-result-diplay > ul {
   list-style-type: none;
   /* Remove padding of list decorators */
   padding: 0px;
-}
-
-.search-result-diplay > ul > li {
-  /* Separate each element a little bit more */
-  padding: 2px;
+  /* Remove margin of list decorators */
+  margin: 0px;
 }
 
 /* Hide results */
 .search-result-hide {
   display: none;
+}
+
+html::-webkit-scrollbar {
+  width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+  background: rgb(179, 177, 177);
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: rgb(136, 136, 136);
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background: rgb(100, 100, 100);
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:active {
+  background: rgb(68, 68, 68);
+  border-radius: 10px;
 }
