--- a/search.css
+++ b/search.css
@@ -39,6 +39,7 @@
   /* Limit height */
   height: 70vh;
   padding: 50px;
+  background: white;
   border: 1px solid #8f97a0;
   border-radius: 5px;
   /* Center vertically */
@@ -49,8 +50,7 @@
   /* Put it above rest of content */
   box-shadow: 0px 0px 20px 0.1px #d0e0f1;
   z-index: 1000;
-
-  overflow: scroll;
+  overflow: auto;
 }
 
 .search-result-diplay > ul {
@@ -64,28 +64,4 @@
 /* Hide results */
 .search-result-hide {
   display: none;
-}
-
-html::-webkit-scrollbar {
-  width: 10px;
-}
-
-html::-webkit-scrollbar-track {
-  background: rgb(179, 177, 177);
-  border-radius: 10px;
-}
-
-html::-webkit-scrollbar-thumb {
-  background: rgb(136, 136, 136);
-  border-radius: 10px;
-}
-
-html::-webkit-scrollbar-thumb:hover {
-  background: rgb(100, 100, 100);
-  border-radius: 10px;
-}
-
-html::-webkit-scrollbar-thumb:active {
-  background: rgb(68, 68, 68);
-  border-radius: 10px;
 }
