--- a/search.css
+++ b/search.css
@@ -37,7 +37,7 @@
 .search-result-diplay {
   display: block;
   /* Limit height */
-  height: 70vh;
+  max-height: 70vh;
   padding: 50px;
   background: white;
   border: 1px solid #8f97a0;
@@ -51,6 +51,21 @@
   box-shadow: 0px 0px 20px 0.1px #d0e0f1;
   z-index: 1000;
   overflow: auto;
+}
+
+/* Scroll bar */
+.search-result-diplay::-webkit-scrollbar {
+  width: 10px;
+}
+
+.search-result-diplay::-webkit-scrollbar-thumb {
+  background: #909090;
+  border-radius: 5px;
+}
+
+.search-result-diplay::-webkit-scrollbar-track {
+  background: #ccc;
+  border-radius: 5px;
 }
 
 .search-result-diplay > ul {
