--- a/search.css
+++ b/search.css
@@ -6,6 +6,55 @@
   margin-right: 20px;
 }
 
+.search-background {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.1); /* Black w/ opacity */
+}
+
+.search-form-modal {
+  display: none; /* Hidden by default */
+  padding: 50px;
+  background: white;
+  border: 1px solid #8f97a0;
+  border-radius: 5px;
+  /* Center vertically (kinda)*/
+  position: absolute;
+  top: 30%;
+  right: 50%;
+  transform: translate(50%, -60%);
+  /* Put it above rest of content */
+  box-shadow: 0px 0px 20px 0.1px #cbced1;
+  z-index: 1000;
+  overflow: auto;
+}
+
+.search-input-in-modal {
+  width: 70%;
+  padding: 4px 10px;
+  border-radius: 6px;
+  border: 2px solid #1e90ff;
+  background: #fff;
+  transition: border .3s ease;
+}
+
+.search-input-in-modal:focus {
+  outline: none;
+  border-color: #ff4500;
+}
+
+.search-input-in-modal::placeholder {
+  color: #CBD1DC;
+}
+
 /* Search box */
 .searchTerm {
   border: 2px solid #1e90ff;
@@ -42,13 +91,13 @@
   background: white;
   border: 1px solid #8f97a0;
   border-radius: 5px;
-  /* Center vertically */
+  /* Center vertically (kinda)*/
   position: absolute;
   top: 50%;
   right: 50%;
-  transform: translate(50%, -50%);
+  transform: translate(50%, -60%);
   /* Put it above rest of content */
-  box-shadow: 0px 0px 20px 0.1px #d0e0f1;
+  box-shadow: 0px 0px 20px 0.1px #cbced1;
   z-index: 1000;
   overflow: auto;
 }
